# otto-package-slack

./: .gitignore  .gitleaks.toml  .osv-scanner.toml  Cargo.toml  MIGRATE-TO-PACKAGE-REPO.md  README.md  deny.toml  otto.toml
.github/: tool-versions.json
.github/workflows/: ci.yml
schemas/: add-reaction-input.schema.json  grant-scope.schema.json  message-event.schema.json  read-thread-input.schema.json  read-thread-output.schema.json  redaction-input.schema.json  search-messages-input.schema.json  send-message-input.schema.json  send-message-output.schema.json  setup-details.schema.json
scripts/ci/: install-pinned-tools.sh  package-acceptance.sh  run-gitleaks-source.sh
src/: lib.rs
tests/: live_slack_smoke.rs  manifest_contract.rs  package-acceptance.json  runtime_contract.rs
ui/: grant.form.json  setup.form.json
